[project]
dependencies = [
  "torch>=2.7.0",
]
description = "A CUDA Performance Test Tool"
name = "torch-performance-test-data"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
[tool.uv.sources]
torch = [
  {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
